Update Pack Promotion.md